--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,17 @@
 {
     "python.pythonPath": "/home/manuel/.pyenv/versions/3.7.4/bin/python",
-    "python.testing.unittestArgs": [
-        "-v",
-        "-s",
-        "./test",
-        "-p",
-        "*test.py"
-    ],
-    "python.testing.pytestEnabled": false,
+    "python.testing.pytestEnabled": true,
     "python.testing.nosetestsEnabled": false,
-    "python.testing.unittestEnabled": true,
+    "python.testing.unittestEnabled": false,
     "files.exclude": {
         "**/.classpath": true,
         "**/.project": true,
         "**/.settings": true,
         "**/.factorypath": true
     },
-    "restructuredtext.confPath": "${workspaceFolder}/docs/source"
+    "restructuredtext.confPath": "${workspaceFolder}/docs/source",
+    "python.testing.pytestArgs": [
+        "test"
+    ],
+    "editor.rulers": [ 119 ]
 }
