--- a/requirements.txt
+++ b/requirements.txt
@@ -21,4 +21,4 @@ six==1.12.0
 trezor==0.11.4
 typing-extensions==3.7.4
 urllib3==1.26.9
-git+https://github.com/makk4/tpass.git@master#egg=tpass
+git+https://github.com/makk4/tpass.git@main#egg=tpass
